--- a/lib/versions.html
+++ b/lib/versions.html
@@ -356,18 +356,6 @@
 </tr>
 			
 <tr>
-<td nowrap="nowrap">com.liferay.commerce.report.impl.jar!jcommon.jar</td><td nowrap="nowrap">1.0.24</td><td nowrap="nowrap"><a href="http://www.jfree.org/jcommon/">JCommon</a></td><td nowrap><a href="http://www.gnu.org/licenses/lgpl.txt">GNU Lesser General Public Licence</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
-<td nowrap="nowrap">com.liferay.commerce.report.impl.jar!jfreechart.jar</td><td nowrap="nowrap">1.0.19</td><td nowrap="nowrap"><a href="http://www.jfree.org/jfreechart/">JFreeChart</a></td><td nowrap><a href="http://www.gnu.org/licenses/lgpl.txt">GNU Lesser General Public Licence</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
 <td nowrap="nowrap">com.liferay.commerce.report.impl.jar!jxl.jar</td><td nowrap="nowrap">2.6.10</td><td nowrap="nowrap"><a href="http://www.jexcelapi.org">jxl</a></td><td nowrap><a href="http://www.opensource.org/licenses/lgpl-license.php">GNU Lesser General Public License</a>
 <br>
 </td><td></td>
@@ -1159,11 +1147,6 @@
 </td><td></td>
 </tr>
 			
-<tr>
-<td nowrap="nowrap">com.liferay.oauth2.provider.rest.jar!jose4j.jar</td><td nowrap="nowrap">0.9.2</td><td nowrap="nowrap"><a href="https://bitbucket.org/b_c/jose4j/">jose4j</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
 <tr>
 <td nowrap="nowrap">com.liferay.oauth2.provider.web.jar!jgrapht-core.jar</td><td nowrap="nowrap">1.3.0</td><td nowrap="nowrap">JGraphT - Core</td><td nowrap><a href="">http://jgrapht.sourceforge.net/LGPL.html, http://www.eclipse.org/legal/epl-v20.html</a>
 <br>
@@ -2737,18 +2720,6 @@
 </tr>
 			
 <tr>
-<td nowrap="nowrap">com.liferay.server.admin.web.jar!jcommon.jar</td><td nowrap="nowrap">1.0.24</td><td nowrap="nowrap"><a href="http://www.jfree.org/jcommon/">JCommon</a></td><td nowrap><a href="http://www.gnu.org/licenses/lgpl.txt">GNU Lesser General Public Licence</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
-<td nowrap="nowrap">com.liferay.server.admin.web.jar!jfreechart.jar</td><td nowrap="nowrap">1.0.19</td><td nowrap="nowrap"><a href="http://www.jfree.org/jfreechart/">JFreeChart</a></td><td nowrap><a href="http://www.gnu.org/licenses/lgpl.txt">GNU Lesser General Public Licence</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
 <td nowrap="nowrap">com.liferay.shared.dependencies.apache.commons.jar!commons-beanutils.jar</td><td nowrap="nowrap">1.9.4</td><td nowrap="nowrap"><a href="https://commons.apache.org/proper/commons-beanutils/">Apache Commons BeanUtils</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
@@ -2870,6 +2841,18 @@
 			
 <tr>
 <td nowrap="nowrap">com.liferay.shared.dependencies.jericho.html.jar!jericho-html.jar</td><td nowrap="nowrap">3.1</td><td nowrap="nowrap"><a href="http://jericho.htmlparser.net">Jericho HTML Parser</a></td><td nowrap><a href="http://www.gnu.org/licenses/lgpl.txt">GNU Lesser General Public License (LGPL)</a>
+<br>
+</td><td></td>
+</tr>
+			
+<tr>
+<td nowrap="nowrap">com.liferay.shared.dependencies.jfree.jar!jcommon.jar</td><td nowrap="nowrap">1.0.24</td><td nowrap="nowrap"><a href="http://www.jfree.org/jcommon/">JCommon</a></td><td nowrap><a href="http://www.gnu.org/licenses/lgpl.txt">GNU Lesser General Public Licence</a>
+<br>
+</td><td></td>
+</tr>
+			
+<tr>
+<td nowrap="nowrap">com.liferay.shared.dependencies.jfree.jar!jfreechart.jar</td><td nowrap="nowrap">1.0.19</td><td nowrap="nowrap"><a href="http://www.jfree.org/jfreechart/">JFreeChart</a></td><td nowrap><a href="http://www.gnu.org/licenses/lgpl.txt">GNU Lesser General Public Licence</a>
 <br>
 </td><td></td>
 </tr>
