LPS-169043 auto generate, by running "ant build-lib-versions"

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -62,12 +62,6 @@
 </tr>
 			
 <tr>
-<td nowrap="nowrap">com.liferay.batch.engine.service.jar!commons-collections4.jar</td><td nowrap="nowrap">4.3</td><td nowrap="nowrap"><a href="http://commons.apache.org/proper/commons-collections/">Apache Commons Collections</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
 <td nowrap="nowrap">com.liferay.batch.engine.service.jar!commons-io.jar</td><td nowrap="nowrap">2.11.0</td><td nowrap="nowrap"><a href="https://commons.apache.org/proper/commons-io/">Apache Commons IO</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
@@ -272,12 +266,6 @@
 </tr>
 			
 <tr>
-<td nowrap="nowrap">com.liferay.commerce.report.impl.jar!commons-collections4.jar</td><td nowrap="nowrap">4.3</td><td nowrap="nowrap"><a href="http://commons.apache.org/proper/commons-collections/">Apache Commons Collections</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
 <td nowrap="nowrap">com.liferay.commerce.report.impl.jar!commons-dbcp2.jar</td><td nowrap="nowrap">2.0</td><td nowrap="nowrap"><a href="http://commons.apache.org/proper/commons-dbcp/">Apache Commons DBCP</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
 <br>
 </td><td></td>
@@ -411,12 +399,6 @@
 			
 <tr>
 <td nowrap="nowrap">com.liferay.commerce.shipping.engine.fedex.jar!org.apache.axis.jar</td><td nowrap="nowrap">1.4.LIFERAY-PATCHED-6</td><td nowrap="nowrap">org.apache.axis</td><td nowrap><a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">LGPL 2.1</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
-<td nowrap="nowrap">com.liferay.content.dashboard.web.jar!commons-collections4.jar</td><td nowrap="nowrap">4.3</td><td nowrap="nowrap"><a href="http://commons.apache.org/proper/commons-collections/">Apache Commons Collections</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
 </tr>
@@ -722,12 +704,6 @@
 </tr>
 			
 <tr>
-<td nowrap="nowrap">com.liferay.dynamic.data.lists.service.jar!commons-collections4.jar</td><td nowrap="nowrap">4.3</td><td nowrap="nowrap"><a href="http://commons.apache.org/proper/commons-collections/">Apache Commons Collections</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
 <td nowrap="nowrap">com.liferay.dynamic.data.lists.service.jar!xmlbeans.jar</td><td nowrap="nowrap">3.1.0</td><td nowrap="nowrap"><a href="https://xmlbeans.apache.org/">XmlBeans</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
 <br>
 </td><td></td>
@@ -819,12 +795,6 @@
 			
 <tr>
 <td nowrap="nowrap">com.liferay.dynamic.data.mapping.service.jar!accessors-smart.jar</td><td nowrap="nowrap">2.4.2</td><td nowrap="nowrap"><a href="https://urielch.github.io/">ASM based accessors helper used by json-smart</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
-<td nowrap="nowrap">com.liferay.dynamic.data.mapping.service.jar!commons-collections4.jar</td><td nowrap="nowrap">4.3</td><td nowrap="nowrap"><a href="http://commons.apache.org/proper/commons-collections/">Apache Commons Collections</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
 </tr>
@@ -2312,12 +2282,6 @@
 </tr>
 			
 <tr>
-<td nowrap="nowrap">com.liferay.portal.tika.jar!commons-collections4.jar</td><td nowrap="nowrap">4.2</td><td nowrap="nowrap"><a href="http://commons.apache.org/proper/commons-collections/">Apache Commons Collections</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
 <td nowrap="nowrap">com.liferay.portal.tika.jar!commons-exec.jar</td><td nowrap="nowrap">1.3</td><td nowrap="nowrap"><a href="http://commons.apache.org/proper/commons-exec/">Apache Commons Exec</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
@@ -2727,6 +2691,12 @@
 			
 <tr>
 <td nowrap="nowrap">com.liferay.shared.dependencies.apache.commons.jar!commons-codec.jar</td><td nowrap="nowrap">1.15</td><td nowrap="nowrap"><a href="https://commons.apache.org/proper/commons-codec/">Apache Commons Codec</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+			
+<tr>
+<td nowrap="nowrap">com.liferay.shared.dependencies.apache.commons.jar!commons-collections4.jar</td><td nowrap="nowrap">4.4</td><td nowrap="nowrap"><a href="https://commons.apache.org/proper/commons-collections/">Apache Commons Collections</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
 </tr>
