LPS-171295 auto generate, by running "ant build-lib-versions"

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -62,6 +62,12 @@
 </tr>
 			
 <tr>
+<td nowrap="nowrap">com.liferay.batch.engine.service.jar!commons-collections4.jar</td><td nowrap="nowrap">4.4</td><td nowrap="nowrap"><a href="https://commons.apache.org/proper/commons-collections/">Apache Commons Collections</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+			
+<tr>
 <td nowrap="nowrap">com.liferay.batch.engine.service.jar!commons-io.jar</td><td nowrap="nowrap">2.11.0</td><td nowrap="nowrap"><a href="https://commons.apache.org/proper/commons-io/">Apache Commons IO</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
@@ -3550,7 +3556,7 @@
 </tr>
 			
 <tr>
-<td nowrap="nowrap">lib/development/postgresql.jar</td><td nowrap="nowrap">42.4.1</td><td nowrap="nowrap"><a href="http://jdbc.postgresql.org">PostgreSQL JDBC Driver</a></td><td nowrap><a href="http://en.wikipedia.org/wiki/BSD_licenses">BSD Style License</a>
+<td nowrap="nowrap">lib/development/postgresql.jar</td><td nowrap="nowrap">42.4.3</td><td nowrap="nowrap"><a href="http://jdbc.postgresql.org">PostgreSQL JDBC Driver</a></td><td nowrap><a href="http://en.wikipedia.org/wiki/BSD_licenses">BSD Style License</a>
 <br>
 </td><td></td>
 </tr>
