LPS-171228 auto generate, by running "ant build-lib-versions"

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -104,18 +104,6 @@
 </tr>
 			
 <tr>
-<td nowrap="nowrap">com.liferay.calendar.service.jar!joda-convert.jar</td><td nowrap="nowrap">2.2.1</td><td nowrap="nowrap"><a href="https://www.joda.org/${joda.artifactId}/">Joda-Convert</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
-<td nowrap="nowrap">com.liferay.calendar.service.jar!joda-time.jar</td><td nowrap="nowrap">2.9.1</td><td nowrap="nowrap"><a href="http://www.joda.org/joda-time/">Joda-Time</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
 <td nowrap="nowrap">com.liferay.calendar.service.jar!jparsec.jar</td><td nowrap="nowrap">3.1</td><td nowrap="nowrap"><a href="http://jparsec.org">jparsec</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
 <br>
 </td><td></td>
@@ -1166,18 +1154,6 @@
 </tr>
 			
 <tr>
-<td nowrap="nowrap">com.liferay.portal.json.validator.jar!joda-convert.jar</td><td nowrap="nowrap">2.2.1</td><td nowrap="nowrap"><a href="https://www.joda.org/${joda.artifactId}/">Joda-Convert</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
-<td nowrap="nowrap">com.liferay.portal.json.validator.jar!joda-time.jar</td><td nowrap="nowrap">2.9.1</td><td nowrap="nowrap"><a href="http://www.joda.org/joda-time/">Joda-Time</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
 <td nowrap="nowrap">com.liferay.portal.json.validator.jar!json.jar</td><td nowrap="nowrap">20220320</td><td nowrap="nowrap"><a href="https://github.com/douglascrockford/JSON-java">JSON in Java</a></td><td nowrap><a href="http://json.org/license.html">The JSON License</a>
 <br>
 </td><td></td>
@@ -1593,12 +1569,6 @@
 			
 <tr>
 <td nowrap="nowrap">com.liferay.portal.search.elasticsearch7.impl.jar!jackson-dataformat-yaml.jar</td><td nowrap="nowrap">2.10.4</td><td nowrap="nowrap"><a href="https://github.com/FasterXML/jackson-dataformats-text">Jackson-dataformat-YAML</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
-<td nowrap="nowrap">com.liferay.portal.search.elasticsearch7.impl.jar!joda-time.jar</td><td nowrap="nowrap">2.10.10</td><td nowrap="nowrap"><a href="https://www.joda.org/joda-time/">Joda-Time</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
 </tr>
@@ -2036,12 +2006,6 @@
 </tr>
 			
 <tr>
-<td nowrap="nowrap">com.liferay.portal.store.gcs.jar!joda-time.jar</td><td nowrap="nowrap">2.8.1</td><td nowrap="nowrap"><a href="http://www.joda.org/joda-time/">Joda-Time</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
 <td nowrap="nowrap">com.liferay.portal.store.gcs.jar!opencensus-api.jar</td><td nowrap="nowrap">0.28.3</td><td nowrap="nowrap"><a href="https://github.com/census-instrumentation/opencensus-java">opencensus-api</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache License, Version 2.0</a>
 <br>
 </td><td></td>
@@ -2139,12 +2103,6 @@
 			
 <tr>
 <td nowrap="nowrap">com.liferay.portal.store.s3.jar!jackson-dataformat-cbor.jar</td><td nowrap="nowrap">2.12.6</td><td nowrap="nowrap"><a href="http://github.com/FasterXML/jackson-dataformats-binary">Jackson dataformat: CBOR</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
-<td nowrap="nowrap">com.liferay.portal.store.s3.jar!joda-time.jar</td><td nowrap="nowrap">2.8.1</td><td nowrap="nowrap"><a href="http://www.joda.org/joda-time/">Joda-Time</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
 </tr>
@@ -2708,6 +2666,18 @@
 </tr>
 			
 <tr>
+<td nowrap="nowrap">com.liferay.shared.dependencies.joda.jar!joda-convert.jar</td><td nowrap="nowrap">2.2.1</td><td nowrap="nowrap"><a href="https://www.joda.org/${joda.artifactId}/">Joda-Convert</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+			
+<tr>
+<td nowrap="nowrap">com.liferay.shared.dependencies.joda.jar!joda-time.jar</td><td nowrap="nowrap">2.12.1</td><td nowrap="nowrap"><a href="https://www.joda.org/joda-time/">Joda-Time</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+			
+<tr>
 <td nowrap="nowrap">com.liferay.shared.dependencies.netty.jar!netty-buffer.jar</td><td nowrap="nowrap">4.1.77.Final</td><td nowrap="nowrap"><a href="https://netty.io/">Netty/Buffer</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
@@ -3027,12 +2997,6 @@
 			
 <tr>
 <td nowrap="nowrap">com.liferay.site.initializer.testray.dispatch.task.executor.jar!jarchivelib.jar</td><td nowrap="nowrap">0.7.1</td><td nowrap="nowrap"><a href="http://rauschig.org/jarchivelib">org.rauschig :: jarchivelib :: Java archiving library</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache 2</a>
-<br>
-</td><td></td>
-</tr>
-			
-<tr>
-<td nowrap="nowrap">com.liferay.site.initializer.testray.dispatch.task.executor.jar!joda-time.jar</td><td nowrap="nowrap">2.8.1</td><td nowrap="nowrap"><a href="http://www.joda.org/joda-time/">Joda-Time</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
 </tr>
