--- a/lib/versions.html
+++ b/lib/versions.html
@@ -3830,7 +3830,7 @@
 </tr>
 			
 <tr>
-<td nowrap="nowrap">lib/portal/spring-beans.jar</td><td nowrap="nowrap">5.2.22</td><td nowrap="nowrap"><a href="http://www.springframework.org">Spring</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
+<td nowrap="nowrap">lib/portal/spring-beans.jar</td><td nowrap="nowrap">5.2.22.LIFERAY-PATCHED-1</td><td nowrap="nowrap"><a href="http://www.springframework.org">Spring</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
 <br>
 </td><td>This includes missing OSGi headers.</td>
 </tr>
